--- a/about.html
+++ b/about.html
@@ -4,11 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./about.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+    </style>
   </head>
   <body>
-    <main></main>
+    <!-- NAVBAR -->
+    <nav class="nav">
+      <div class="logo">
+        <img src="./images/logo" alt="Logo OutDoorAdventure" />
+      </div>
+      <ul class="navlink">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./service.html">Services</a></li>
+        <li><a href="./project.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <div class="button"><a href="#">TAKE ACTION</a></div>
+      </ul>
+    </nav>
+    <header>
+      <div class="header">
+        <h1>Who We Are?</h1>
+      </div>
+    </header>
+    <main>
+      <!-- ABOUT SECTION -->
+      <section class="section">
+        <div class="content-text">
+          <h2>Our MissioN</h2>
+          <div class="redline"></div>
+          <p>
+            Click edit button to change this text. Lorem ipsum dolor sit amet,
+            adipiscing elit.
+          </p>
+          <p>
+            Click edit button to change this text. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
+            mattis, pulvinar dapibus leo
+          </p>
+        </div>
+        <div class="content-image">
+          <img src="./images/water.jpg" alt="About Us" />
+        </div>
+      </section>
 
-    <footer></footer>
+      <section class="section">
+        <div class="content-section">
+          <h3>Extraordinary Experiences</h3>
+          <div class="redline"></div>
+          <p>
+            Click edit button to change this text. Lorem ipsum dolor sit amet,
+            adipiscing elit.
+          </p>
+          <p>
+            Click edit button to change this text. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
+            mattis, pulvinar dapibus leo
+          </p>
+        </div>
+        <div class="content-section">
+          <h3>Our Core Value</h3>
+          <div class="redline"></div>
+          <p>
+            Click edit button to change this text. Lorem ipsum dolor sit amet,
+            adipiscing elit.
+          </p>
+          <p>
+            Click edit button to change this text. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
+            mattis, pulvinar dapibus leo
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer-content">
+        123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email:
+        contact@example.com
+        <div>Copyright © 2025 Outdoor Adventure</div>
+      </div>
+    </footer>
   </body>
 </html>
