--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     </style>
   </head>
   <body>
+    <!-- NAVBAR -->
+    <nav class="nav">
+      <div class="logo">
+        <img src="./images/logo" alt="Logo OutDoorAdventure" />
+      </div>
+      <ul class="navlink">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./service.html">Services</a></li>
+        <li><a href="./project.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>          
+        <div class="button"><a href="#">TAKE ACTION</a></div>
+      </ul>
+    </nav>
     <header>
-      <!-- NAVBAR -->
-      <nav class="nav">
-        <div class="logo">
-          <img src="./images/logo" alt="Logo OutDoorAdventure" />
-        </div>
-        <ul class="navlink">
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="./service.html">Services</a></li>
-          <li><a href="./project.html">Projects</a></li>
-          <li><a href="./contact.html">Contact</a></li>          
-          <div class="button"><a href="#">TAKE ACTION</a></div>
-        </ul>
-      </nav>
       <div class="hero-content">
         <h2>Explore the Colourful World</h2>
         <div class="redline"></div>
@@ -34,17 +34,16 @@
     </header>
     <main>
       <!-- CITATION -->
-      <section class="quote-section">
-        <div class="quote">        
+       <section class="citation">                
           <img src="./images/quote" alt="Logo quote" />
-        </div>
+        
           <div class="text">
               "Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
               liberioris."
           </div>
           <div class="author">- Adam Sendler</div>
           </div>
-      </section>
+       </section>
 
       <!-- SECTION 1 UPCOMING -->
       <section class="upcoming-events">
