--- a/service.html
+++ b/service.html
@@ -4,10 +4,92 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./service.css" />
   </head>
   <body>
-    <main></main>
-    <footer></footer>
+    <!-- NAVBAR -->
+    <nav class="nav">
+      <div class="logo">
+        <img src="./images/logo" alt="Logo OutDoorAdventure" />
+      </div>
+      <ul class="navlink">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./service.html">Services</a></li>
+        <li><a href="./project.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <div class="button"><a href="#">TAKE ACTION</a></div>
+      </ul>
+    </nav>
+    <header>
+      <div class="header">
+        <h1>Services</h1>
+      </div>
+    </header>
+    <main>
+      <div class="title1">
+        <h2>It's Time to Start Your Adventures</h2>
+        <div class="redline"></div>
+        <p>
+          Click edit button to change this text. Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Ut elit tellus, luctus ullamcorpe
+          pulvinar.
+        </p>
+      </div>
+      <section class="section">
+        <div class="container">
+          <div class="section-content">
+            <div class="content">
+              <img src="./images/mountain2.jpg" alt="Backpacking Trips" />
+            </div>
+            <h3>Backpacking Trips</h3>
+            <p>
+              Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
+              liberioris inistra possedit.
+            </p>
+          </div>
+          <div class="section-content">
+            <div class="content">
+              <img src="./images/montain3.jpg" alt="Water Sports" />
+            </div>
+            <h3>Water Sports</h3>
+            <p>
+              Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
+              liberioris inistra possedit.
+            </p>
+          </div>
+        </div>
+        <div class="container">
+          <div class="section-content">
+            <div class="content">
+              <img src="./images/mountain1.jpg" alt="Family Hiking Trips" />
+            </div>
+            <h3>Family Hiking Trips</h3>
+            <p>
+              Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
+              liberioris inistra possedit.
+            </p>
+          </div>
+            <div class="section-content">
+              <div class="content">
+                <img src="./images/mountainski.jpg" alt="Winter Sports" />
+              </div>
+              <h3>Winter Sports</h3>
+              <p>
+                Fuerat aestu carentem habentia spectent tonitrua mutastis
+                locavit liberioris inistra possedit.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-content">
+        123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email:
+        contact@example.com
+        <div>Copyright © 2025 Outdoor Adventure</div>
+      </div>
+    </footer>
   </body>
 </html>
