--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div class="logo">
         <img src="./images/logo" alt="Logo OutDoorAdventure" />
       </div>
+      <!-- <div class"menu-burger">
+        <img src="./images/hamburger-menu-svgrepo-com.svg" alt="Menu Hamburger">
+      </div>        -->
       <ul class="navlink">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
@@ -29,13 +32,13 @@
         <h2>Explore the Colourful World</h2>
         <div class="redline"></div>
         <h1>A Wonderful Gift</h1>
-        <a href="#" class="cta-button">LEARN MORE</a>
+        <a href="#" class="cta-button">LEARN MORE </a>
       </div>
     </header>
     <main>
       <!-- CITATION -->
        <section class="citation">                
-          <img src="./images/quote" alt="Logo quote" />
+          <img src="./images/quote" alt="Pictogramme quote" />
         
           <div class="text">
               "Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
@@ -52,25 +55,25 @@
         <div class="container">
         <div class="event-trek">
           <div class="event1">
-            <img src="./images/trek" alt="Event 1" />
+            <img src="./images/trek" alt="Everest Camp Trek" />
           </div>
           <h3>Everest Camp Trek</h3>
           <p>
             Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
             liberioris inistra possedit.
           </p>
-          <a href="#" class="cta-button">Learn More</a>
+          <a href="#" class="cta-button">Learn More &#10140;</a>
         </div>
         <div class="event-walk">
           <div class="event2">
-            <img src="./images/walk" alt="Event 2" />
+            <img src="./images/walk" alt="Walking Holidays" />
           </div>
           <h3>Walking Holidays</h3>
           <p>
             Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
             liberioris inistra possedit.
           </p>
-          <a href="#" class="cta-button">Learn More</a>
+          <a href="#" class="cta-button">Learn More &#10140;</a>
         </div>
         </div>
       </section>
@@ -87,9 +90,9 @@
             concordi. Fert his. Recessit mentes praecipites locum caligine sui
             egens erat. Silvas caeli regna.
           </p>
+          <a href="#" class="cta-button">Learn More &#10140;</a>
         </div>
-          <a href="#" class="cta-button">Learn More</a>
-        </div>
+      </div>
       </section>
 
       <!-- SECTION 3 TOURS -->
@@ -102,11 +105,11 @@
             liberioris. Sinistra possedit litora ut nabataeaque. Setucant
             coepyterunt perveniunt animal! Concordi aurea nabataeaque seductaque
             constaque cepit sublime flexi nullus.
+            <div><a href="#" class="cta-button">Learn More &#10140;</a></div>
           </p>
-          <a href="#" class="cta-button">Learn More</a>
         </div>
         <div class="image-content-1">
-          <img src="./images/ski2" alt="Ski" />
+          <img src="./images/ski2" alt="Ski descente" />
           <img src="./images/bike" alt="Bike" />
         </div>
         <div class="image-content-2">
