--- a/project.html
+++ b/project.html
@@ -4,10 +4,113 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./project.css" />
   </head>
   <body>
-    <main></main>
-    <footer></footer>
+    <!-- NAVBAR -->
+    <nav class="nav">
+      <div class="logo">
+        <img src="./images/logo" alt="Logo OutDoorAdventure" />
+      </div>
+      <ul class="navlink">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./service.html">Services</a></li>
+        <li><a href="./project.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <div class="button"><a href="#">TAKE ACTION</a></div>
+      </ul>
+    </nav>
+    <header>
+      <div class="header">
+        <h1>Our Projects</h1>
+      </div>
+    </header>
+
+    <main>
+      <div class="main-section">
+        <div class="container">  
+
+          <div class="content">
+            <div class="sous-titre">
+              <h4>Adventure</h4>
+              <div class="redline"></div>
+            </div>
+            <h2>Water Sports</h2>
+            <p>
+              Interdum exercitation penatibus, praesentium facilisi accusamus
+              fermentum, sagittis.
+            </p>
+          </div> 
+
+        <section class="carrousel">
+          <div class="section-content">
+            <div class="content-image">
+              <img src="./images/water-sports-03.jpg" alt="Water sport 01" />
+              <img src="./images/water-sports-04.jpg" alt="Water Sport 02" />
+              <img src="./images/water-sports-01.jpg" alt="Water Sport 03" />
+            </div>
+          </div>
+          <div class="section-content">
+            <div class="point">                       
+        </section>
+
+          <div class="content"> 
+            <div class="sous-titre">
+              <h4>Snow Adventure</h4>
+              <div class="redline"></div>
+            </div>
+              <h2>Winter Sports</h2>
+              <p>
+                Interdum exercitation penatibus, praesentium facilisi accusamus
+                fermentum, sagittis.
+              </p>
+          </div>
+
+        <section class="carrousel">
+          <div class="section-content">
+            <div class="content-image">
+              <img src="./images/winter-sports-01-nzqdakvd9y6ql3cjzkfjdcrr6o5msw2mv8o8ug2dqw.jpg" alt="Winter sport 01" />
+              <img src="./images/winter-sports-02-nzqdabgzdltvczq7igd9of558tfynx1bhy5e1ogbh4.jpg" alt="Winter Sport 02" />
+              <img src="./images/winter-sports-03-nzqd8khsnpfnr49oq759jd19g02dc73axafuw51p20.jpg" alt="Winter Sport 03" />
+            </div>
+          </div>
+          <div class="section-content">
+            <div class="point">                       
+            </section>
+            
+            <div class="content"> 
+              <div class="sous-titre">
+                <h4>Forest Tours</h4>
+                <div class="redline"></div>
+              </div>
+                <h2>Camping</h2>
+                <p>
+                  Interdum exercitation penatibus, praesentium facilisi accusamus
+                  fermentum, sagittis.
+                </p>
+            </div>
+            <section class="carrousel">
+              <div class="section-content">
+                <div class="content-image">
+                  <img src="./images/camp-1-nzqd81p0v0pxax0zrz0q5hs1kan1290o6pe5altkig.jpg" alt="Water sport 01" />
+                  <img src="./images/camp-2-nzqd7cbdqhr6lg1uw61ss66liw44af7x37s1c4v76g.jpg" alt="Water Sport 02" />
+                  <img src="./images/camp-3-nzqd6qp3daxl6ex9eepdotmzv12oddu3c8rvarr95k.jpg" alt="Water Sport 03" />
+                </div>
+              </div>
+              <div class="section-content">
+                <div class="point">                       
+              </div>
+            </section>
+      </div class="main-section">
+
+    </main>
+    <footer>
+      <div class="footer-content">
+        123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email:
+        contact@example.com
+        <div>Copyright © 2025 Outdoor Adventure</div>
+      </div>
+    </footer>
   </body>
 </html>
