--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       </div>
     </header>
     <main>
-      <!-- ABOUT SECTION -->
+      <!--SECTION ABOUT -->
       <section class="section">
         <div class="content-text">
           <h2>Our MissioN</h2>
