--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,96 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>About</title>
+    <link rel="stylesheet" href="./about.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+    </style>
   </head>
   <body>
-    <main></main>
-    <footer></footer>
+    <!-- NAVBAR -->
+    <nav class="nav">
+      <div class="logo">
+        <img src="./images/logo" alt="Logo OutDoorAdventure" />
+      </div>
+      <ul class="navlink">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./service.html">Services</a></li>
+        <li><a href="./project.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <div class="button"><a href="#">TAKE ACTION</a></div>
+      </ul>
+    </nav>
+    <header>
+      <div class="header">
+        <h1>Contact Us</h1>
+      </div>
+    </header>
+    <main>
+      <section class="section">
+        <div class="content-section">
+          <div class="content"></div>
+          <h2>We're Ready, Let's Talk.</h2>
+          <form class="contact" action="#" method="post">
+            <div class="form-group">
+              <label for="name"></label>
+              <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Your Name"
+              required
+              />
+            </div>
+            <div class="form-group">
+              <label for="email"></label>
+              <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Email Address"
+                required
+                />
+              </div>
+              <div class="form-group">
+                <label for="message"></label>
+                <textarea
+                id="message"
+                name="message"
+                placeholder="Message"
+                rows="5"
+                required
+                ></textarea>
+              </div>
+              <button type="submit" class="btn">SEND MESSAGE</button>
+            </form>
+          </div>
+        </div>
+        <div class="content">
+          <h3>Address​</h3>
+          <p>123 Fifth Avenue, NY 10160, New York, USA</p>
+          <h3>Email Us</h3>
+          <p>contact@example.com</p>
+          <h3>Call Us</h3>
+          <p>800-123-456</p>
+          <h3>Follow Us</h3>
+          <div class="social-logo">
+            <img src="./images/fb.png" alt="Logo Facebook">
+            <img src="./images/x.png" alt="Logo Twitter">
+            <img src="./images/yt.png" alt="Logo Youtube">
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer-content">
+        123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email:
+        contact@example.com
+        <div>Copyright © 2025 Outdoor Adventure</div>
+      </div>
+    </footer>
   </body>
 </html>
