--- a/service.html
+++ b/service.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services</title>
     <link rel="stylesheet" href="./service.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+    </style>
   </head>
   <body>
     <!-- NAVBAR -->
@@ -27,15 +30,17 @@
       </div>
     </header>
     <main>
-      <div class="title1">
-        <h2>It's Time to Start Your Adventures</h2>
-        <div class="redline"></div>
-        <p>
-          Click edit button to change this text. Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Ut elit tellus, luctus ullamcorpe
-          pulvinar.
-        </p>
-      </div>
+      <section class="section">
+        <div class="title1">
+          <h2>It's Time to Start Your Adventures</h2>
+          <div class="redline"></div>
+          <p>
+            Click edit button to change this text. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Ut elit tellus, luctus ullamcorpe
+            pulvinar.
+          </p>
+        </div>
+      </section>
       <section class="section">
         <div class="container">
           <div class="section-content">
